k8s/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wuzapi-staging
  labels:
    app.kubernetes.io/managed-by: liteti
    environment: staging
    project: wuzapi
